szbd CNV bed file created

--- a/notebook/2020-07-24-szdb/2020-07-24-szdb.ipynb
+++ b/notebook/2020-07-24-szdb/2020-07-24-szdb.ipynb
@@ -9,25 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
     "import pandas as pd\n",
     "import re\n",
-    "import szdb"
+    "import szdb\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +230,7 @@
        "[862 rows x 6 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +282,7 @@
        "True"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,41 +300,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('16', 'p12'),\n",
-       " ('16', 'p13.1'),\n",
-       " ('6', 'q22'),\n",
-       " ('13', 'q31'),\n",
-       " ('7', 'p36.3'),\n",
-       " ('22', 'q11.2'),\n",
-       " ('3', 'p263'),\n",
-       " ('21', 'q22'),\n",
-       " ('7', 'q11.2'),\n",
-       " ('22', 'q11'),\n",
-       " ('8', 'q11.2'),\n",
-       " ('16', 'p11'),\n",
-       " ('15', 'q11'),\n",
-       " ('6', 'p13.11'),\n",
-       " ('10', 'q23'),\n",
-       " ('6', 'q24'),\n",
-       " ('20', 'q11'),\n",
-       " ('15', 'q12.1'),\n",
+       "[('15', 'q11'),\n",
        " ('17', 'q21.3'),\n",
-       " ('3', 'p21')]"
+       " ('20', 'q11'),\n",
+       " ('22', 'q11.2'),\n",
+       " ('16', 'p13.1'),\n",
+       " ('6', 'p13.11'),\n",
+       " ('13', 'q31'),\n",
+       " ('3', 'p263'),\n",
+       " ('16', 'p11'),\n",
+       " ('8', 'q11.2'),\n",
+       " ('15', 'q12.1'),\n",
+       " ('6', 'q22'),\n",
+       " ('7', 'q11.2'),\n",
+       " ('7', 'p36.3'),\n",
+       " ('10', 'q23'),\n",
+       " ('21', 'q22'),\n",
+       " ('3', 'p21'),\n",
+       " ('16', 'p12'),\n",
+       " ('6', 'q24'),\n",
+       " ('22', 'q11')]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "incorr = list(set_CNV_start - set_bgcb)\n",
+    "incorr = list(set_CNV_start - set_hgcb)\n",
     "incorr"
    ]
   },
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def correct(incorr, corr, which='start'):\n",
     "    corr_cb.loc[incorr, 'corr ' + which] = corr\n",
-    "    if corr not in set_bgcb:\n",
+    "    if corr not in set_hgcb:\n",
     "        print('Wrong input:', corr, '\\nTry again')\n",
     "    \n",
     "def corrs(incorr, corr):\n",
@@ -398,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +497,7 @@
        "Int64Index([760, 959], dtype='int64')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,19 +511,390 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now expand rows of `CNV` that correspond to CNVs spanning multiple cytogenic bands."
+    "Now expand each row of `CNV` that corresponds multiple cytogenic bands either because a range of bands were given or the single band that was given corresponds to multiple ones in `hgcb`.  Essentially we move from CNV based rows to cytogenic band based ones.  We also annotate each row with the start and end base of its cytoband based on `hgcb`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>PMID</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Cases</th>\n",
+       "      <th>control</th>\n",
+       "      <th>Familial</th>\n",
+       "      <th>population</th>\n",
+       "      <th>chromosome</th>\n",
+       "      <th>cytoband</th>\n",
+       "      <th>type</th>\n",
+       "      <th>Genes</th>\n",
+       "      <th>Main findings</th>\n",
+       "      <th>note</th>\n",
+       "      <th>hg cytoband</th>\n",
+       "      <th>hg chr cytoband</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>16434481</td>\n",
+       "      <td>human BAC microarray 2.0 and qPCR</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>Sporadic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>q21.3</td>\n",
+       "      <td>del</td>\n",
+       "      <td>EFNA5 (1 gene)</td>\n",
+       "      <td>4 genes in the abrrent loci are associated wit...</td>\n",
+       "      <td>Bipolar disorder is also included in this rese...</td>\n",
+       "      <td>q21.3</td>\n",
+       "      <td>(5, q21.3)</td>\n",
+       "      <td>104500000</td>\n",
+       "      <td>109600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>16434481</td>\n",
+       "      <td>human BAC microarray 2.1 and qPCR</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>Sporadic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>q12.3</td>\n",
+       "      <td>del</td>\n",
+       "      <td>CACNG2 (1 gene)</td>\n",
+       "      <td>4 genes in the abrrent loci are associated wit...</td>\n",
+       "      <td>Bipolar disorder is also included in this rese...</td>\n",
+       "      <td>q12.3</td>\n",
+       "      <td>(22, q12.3)</td>\n",
+       "      <td>32200000</td>\n",
+       "      <td>37600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>16434481</td>\n",
+       "      <td>human BAC microarray 2.2 and qPCR</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>Sporadic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>q23.3</td>\n",
+       "      <td>dup</td>\n",
+       "      <td>AKAP5 (1 gene)</td>\n",
+       "      <td>4 genes in the abrrent loci are associated wit...</td>\n",
+       "      <td>Bipolar disorder is also included in this rese...</td>\n",
+       "      <td>q23.3</td>\n",
+       "      <td>(14, q23.3)</td>\n",
+       "      <td>64800000</td>\n",
+       "      <td>67900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>16434481</td>\n",
+       "      <td>human BAC microarray 2.3 and qPCR</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>35 + 15</td>\n",
+       "      <td>Sporadic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>p34.3</td>\n",
+       "      <td>dup</td>\n",
+       "      <td>GRIK3 (1 gene)</td>\n",
+       "      <td>4 genes in the abrrent loci are associated wit...</td>\n",
+       "      <td>Bipolar disorder is also included in this rese...</td>\n",
+       "      <td>p34.3</td>\n",
+       "      <td>(1, p34.3)</td>\n",
+       "      <td>34600000</td>\n",
+       "      <td>40100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kirov</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>17989066</td>\n",
+       "      <td>Tiling Path BAC Array</td>\n",
+       "      <td>93 trios</td>\n",
+       "      <td>Database of Genomic Variants + 372</td>\n",
+       "      <td>Familial + Sporadic</td>\n",
+       "      <td>Bulgarian</td>\n",
+       "      <td>1</td>\n",
+       "      <td>q44</td>\n",
+       "      <td>dup</td>\n",
+       "      <td>EFCAB2/KIF26B (2 genes)</td>\n",
+       "      <td>13 aberrations were found to be associated wit...</td>\n",
+       "      <td>1/93 in cases; inhereated from father</td>\n",
+       "      <td>q44</td>\n",
+       "      <td>(1, q44)</td>\n",
+       "      <td>243700000</td>\n",
+       "      <td>249250621</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Author  Year      PMID                           Platform       Cases  \\\n",
+       "0  Wilson   2006  16434481  human BAC microarray 2.0 and qPCR     35 + 15   \n",
+       "1  Wilson   2006  16434481  human BAC microarray 2.1 and qPCR     35 + 15   \n",
+       "2  Wilson   2006  16434481  human BAC microarray 2.2 and qPCR     35 + 15   \n",
+       "3  Wilson   2006  16434481  human BAC microarray 2.3 and qPCR     35 + 15   \n",
+       "5   Kirov   2008  17989066              Tiling Path BAC Array  93 trios     \n",
+       "\n",
+       "                              control             Familial population  \\\n",
+       "0                             35 + 15             Sporadic        NaN   \n",
+       "1                             35 + 15             Sporadic        NaN   \n",
+       "2                             35 + 15             Sporadic        NaN   \n",
+       "3                             35 + 15             Sporadic        NaN   \n",
+       "5  Database of Genomic Variants + 372  Familial + Sporadic  Bulgarian   \n",
+       "\n",
+       "  chromosome cytoband type                    Genes  \\\n",
+       "0          5    q21.3  del           EFNA5 (1 gene)   \n",
+       "1         22    q12.3  del          CACNG2 (1 gene)   \n",
+       "2         14    q23.3  dup           AKAP5 (1 gene)   \n",
+       "3          1    p34.3  dup           GRIK3 (1 gene)   \n",
+       "5          1      q44  dup  EFCAB2/KIF26B (2 genes)   \n",
+       "\n",
+       "                                       Main findings  \\\n",
+       "0  4 genes in the abrrent loci are associated wit...   \n",
+       "1  4 genes in the abrrent loci are associated wit...   \n",
+       "2  4 genes in the abrrent loci are associated wit...   \n",
+       "3  4 genes in the abrrent loci are associated wit...   \n",
+       "5  13 aberrations were found to be associated wit...   \n",
+       "\n",
+       "                                                note hg cytoband  \\\n",
+       "0  Bipolar disorder is also included in this rese...       q21.3   \n",
+       "1  Bipolar disorder is also included in this rese...       q12.3   \n",
+       "2  Bipolar disorder is also included in this rese...       q23.3   \n",
+       "3  Bipolar disorder is also included in this rese...       p34.3   \n",
+       "5              1/93 in cases; inhereated from father         q44   \n",
+       "\n",
+       "  hg chr cytoband      start        end  \n",
+       "0      (5, q21.3)  104500000  109600000  \n",
+       "1     (22, q12.3)   32200000   37600000  \n",
+       "2     (14, q23.3)   64800000   67900000  \n",
+       "3      (1, p34.3)   34600000   40100000  \n",
+       "5        (1, q44)  243700000  249250621  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expandedCNV = szdb.expandCNV(CNV, hgcb, corr_cb)\n",
+    "expandedCNV.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summarize the results by counting how many times a cytogenic band appears in the `CNV` table.  Write summary to a BED file."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>chrom</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chromosome</th>\n",
+       "      <th>hg cytoband</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <th>q11.2</th>\n",
+       "      <td>15</td>\n",
+       "      <td>20700000</td>\n",
+       "      <td>25700000</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <th>q11.21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>17900000</td>\n",
+       "      <td>22200000</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <th>q21.1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>142600000</td>\n",
+       "      <td>147000000</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <th>p11.2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>28100000</td>\n",
+       "      <td>34600000</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <th>q11.22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22200000</td>\n",
+       "      <td>23500000</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">2</th>\n",
+       "      <th>q11.1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>93300000</td>\n",
+       "      <td>96800000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>q14.1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>114400000</td>\n",
+       "      <td>118800000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>q14.3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>122400000</td>\n",
+       "      <td>129900000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>q22.2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>142200000</td>\n",
+       "      <td>144100000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <th>q12</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>28800000</td>\n",
+       "      <td>59373566</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>364 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       chrom      start        end  count\n",
+       "chromosome hg cytoband                                   \n",
+       "15         q11.2          15   20700000   25700000     51\n",
+       "22         q11.21         22   17900000   22200000     49\n",
+       "1          q21.1           1  142600000  147000000     46\n",
+       "16         p11.2          16   28100000   34600000     39\n",
+       "22         q11.22         22   22200000   23500000     35\n",
+       "...                      ...        ...        ...    ...\n",
+       "2          q11.1           2   93300000   96800000      1\n",
+       "           q14.1           2  114400000  118800000      1\n",
+       "           q14.3           2  122400000  129900000      1\n",
+       "           q22.2           2  142200000  144100000      1\n",
+       "Y          q12             Y   28800000   59373566      1\n",
+       "\n",
+       "[364 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CNV_summary = szdb.summarizeCNV(expandedCNV)\n",
+    "CNV_summary.to_csv('/big/results/bsm/2020-07-24-szdb/szdb-CNV-cytogenic-band-counts.bed', sep='\\t', index=False, header=False)\n",
+    "CNV_summary.sort_values(by='count', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
