count occurrence of cytogenic bands in szdb's CNV table

--- a/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
+++ b/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +62,9 @@
       "                        (/home/attila/projects/bsm/results/calls/)\n",
       "  -l VCFLIST, --vcflist VCFLIST\n",
       "                        list of samples and VCF files\n",
-      "                        (/big/results/bsm/calls/filtered-vcfs.tsv)\n"
+      "                        (/big/results/bsm/calls/filtered-vcfs.tsv)\n",
+      "Welcome, Attila Jones!\n",
+      "\n"
      ]
     }
    ],
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +467,7 @@
        "[410 rows x 123 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +488,7 @@
        "\"['CHROM', 'POS', 'REF', 'ALT', 'QUAL', 'FILTER/PASS', 'FILTER/HC', 'FILTER/EXT', 'AC', 'AF', 'AN', 'BaseQRankSum', 'DP', 'DS', 'END', 'ExcessHet', 'FS', 'InbreedingCoeff', 'MLEAC', 'MLEAF', 'MQ', 'MQRankSum', 'NEGATIVE_TRAIN_SITE', 'POSITIVE_TRAIN_SITE', 'QD', 'RAW_MQandDP', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'culprit', 'ChromatinState_DLPFC', 'SiPhyLOD', 'SiPhyBranchLen', 'chromatinState_DLPFC', 'evolConstrain', 'Sample', 'Individual ID', 'Tissue', 'Individual Notes', 'Institution', 'Brain ID', 'SCZ Pair', 'BP Pair', 'Changed (used Affy phenotype)', 'Reported Gender', 'Sex', 'Ethnicity', 'Race', 'Genotype Inferred Ancestry', 'ageOfDeath', 'Date of Death', 'Time of Death', 'Time of Death (Military)', 'Autopsy ID', 'Brain Weight (in grams)', 'PMI (in hours)', 'pH', 'Dx', 'primaryDiagnosisDetail', 'Presence or Absence of Dementia (Y/N)', 'CDR', 'Year of Autopsy', 'Neuropath', 'Neuropath desc', 'Gross Diagnosis', 'Benzodiazepines', 'Anticonvulsants', 'AntipsychTyp', 'AntipsychAtyp', 'Antidepress', 'Lithium', 'Tobacco', 'Tobacco (Past)', 'Alcohol', 'Illicitsub', 'causeOfDeath', 'DescDeath', 'Hyperten', 'DiabetesInsDep', 'DiabetesNonInsDep', 'ECT', 'Seizures', 'Braak Stage', 'H/O Head Inj.', 'H/O COPD', 'H/O Stroke', 'H/O PD.AD.LBD.Pick', 'Cardiovascular Disease', 'Lobotomy', 'BMI (Traditional)', 'BMI (cm/kg)', 'Height (cm)', 'Weight (kg)', 'Height (Inches)', 'Weight (pounds)', 'VExC', 'VexcText', 'Antipsychotic-Free (weeks)', 'Source of Autopsy', 'Education', 'Years of Education', 'MaritalStatus', 'FormalinTissue', 'Toxicology Screen: Alcohol', 'Toxicology Screen: Antipsychotics', 'Toxicology Screen: Antidepress', 'Toxicology Screen: Moodstab', 'Toxicology Screen: Benzos', 'Toxicology Screen: Nicotine/Cotinine', 'Toxicology Screen: THC', 'Toxicology Screen: Cocaine', 'Toxicology Screen: Opiates', 'otherDiagnosis', 'otherMedicalDetail', 'mannerOfDeath', 'PMICertain', 'Genotyping_Sample_ID', 'Cluster', 'EV.1', 'EV.2', 'EV.3', 'EV.4', 'EV.5']\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +508,7 @@
        "Text(0, 0.5, '# samples')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -540,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +617,7 @@
        "All                296  114  410"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2ecf637610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1bbc277b90>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -659,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +806,7 @@
        "All                       296  114  410"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,16 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2ecf0be450>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1bb8127410>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -849,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +869,7 @@
        "(2.5, 0.5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -892,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -952,16 +963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e92532690>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1bb6634450>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -990,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1531,7 @@
        "[14 rows x 30 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1576,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1599,16 +1610,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e92047b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1baf24ce50>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1631,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1639,13 +1650,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 35279,\n",
-      "  \"iopub_port\": 44525,\n",
-      "  \"stdin_port\": 53245,\n",
-      "  \"control_port\": 36197,\n",
-      "  \"hb_port\": 44885,\n",
+      "  \"shell_port\": 52135,\n",
+      "  \"iopub_port\": 50069,\n",
+      "  \"stdin_port\": 46997,\n",
+      "  \"control_port\": 41703,\n",
+      "  \"hb_port\": 49965,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"0bf593fb-8b82f1c154e62cbd546e7507\",\n",
+      "  \"key\": \"b4f65bb4-f94fe6f7dbfed11c02f716cb\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1654,7 +1665,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-9b407a41-6869-4213-b79b-cce591480b8f.json\n",
+      "    $> jupyter <app> --existing kernel-a4b6bd03-db61-4016-9af2-ea8d93174f87.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
